adapters/vnf-operator/deployment/kubernetes/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: oran-system
  labels:
    name: oran-system
    purpose: o-ran-mano-system
---
apiVersion: v1
kind: Namespace
metadata:
  name: oran-monitoring
  labels:
    name: oran-monitoring
    purpose: o-ran-monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: oran-observability
  labels:
    name: oran-observability
    purpose: o-ran-observability
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oran-system-netpol
  namespace: oran-system
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: oran-monitoring
    - namespaceSelector:
        matchLabels:
          name: oran-system
    - namespaceSelector:
        matchLabels:
          name: oran-observability
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: oran-system
    - namespaceSelector:
        matchLabels:
          name: oran-monitoring
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 443
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: oran-monitoring-netpol
  namespace: oran-monitoring
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          name: oran-system
    - namespaceSelector:
        matchLabels:
          name: oran-monitoring
    - namespaceSelector:
        matchLabels:
          name: oran-observability
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          name: oran-system
    - namespaceSelector:
        matchLabels:
          name: oran-monitoring
  - to: []
    ports:
    - protocol: TCP
      port: 53
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 443
